--- a/html/beef.html
+++ b/html/beef.html
@@ -623,6 +623,8 @@
     crossorigin="anonymous"
   ></script>
 
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  
   <script
     type="text/javascript"
     src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.0.1/mdb.min.js"
