--- a/html/index.html
+++ b/html/index.html
@@ -120,7 +120,7 @@
                 class="title text-center p-2 col-12 col-sm-9 col-lg-7 col-xl-6 mx-auto fw-bold"
             >
                 <h1 class="display-5" id="main">
-                    Search/Share Your Favorite Recipes
+                    Search For Your Favorite Recipes
                 </h1>
             </div>
         </div>
